[Graal] compiler/graalunit/CoreTest.java fails

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 12
    • Affects Version/s: 11
    • Component/s: hotspot
    • b04

      testDoubleArrayWithShortStoreAndRead(org.graalvm.compiler.core.test.ea.PartialEscapeUnsafeStoreTest)
      org.junit.ComparisonFailure: Exception message expected:<...f bounds for length [-1163019586]> but was:<...f bounds for length [4]>
      at org.junit.Assert.assertEquals(Assert.java:115)
      at org.graalvm.compiler.core.test.GraalCompilerTest.assertEquals(GraalCompilerTest.java:878)
      at org.graalvm.compiler.core.test.GraalCompilerTest.testAgainstExpected(GraalCompilerTest.java:857)
      at org.graalvm.compiler.core.test.GraalCompilerTest.testAgainstExpected(GraalCompilerTest.java:852)
      at org.graalvm.compiler.core.test.GraalCompilerTest.test(GraalCompilerTest.java:821)
      at org.graalvm.compiler.core.test.GraalCompilerTest.test(GraalCompilerTest.java:790)
      at org.graalvm.compiler.core.test.GraalCompilerTest.test(GraalCompilerTest.java:783)
      at org.graalvm.compiler.core.test.ea.PartialEscapeUnsafeStoreTest.testDoubleArrayWithShortStoreAndRead(PartialEscapeUnsafeStoreTest.java:968)
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
      at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
      at java.base/java.lang.reflect.Method.invoke(Method.java:566)
      at org.junit.runners.model.FrameworkMethod$1.runReflectiveCall(FrameworkMethod.java:50)
      at org.junit.internal.runners.model.ReflectiveCallable.run(ReflectiveCallable.java:12)
      at org.junit.runners.model.FrameworkMethod.invokeExplosively(FrameworkMethod.java:47)
      at org.junit.internal.runners.statements.InvokeMethod.evaluate(InvokeMethod.java:17)
      at org.junit.internal.runners.statements.RunAfters.evaluate(RunAfters.java:27)
      at org.junit.runners.ParentRunner.runLeaf(ParentRunner.java:325)
      at org.junit.runners.BlockJUnit4ClassRunner.runChild(BlockJUnit4ClassRunner.java:78)
      at org.junit.runners.BlockJUnit4ClassRunner.runChild(BlockJUnit4ClassRunner.java:57)
      at org.junit.runners.ParentRunner$3.run(ParentRunner.java:290)
      at org.junit.runners.ParentRunner$1.schedule(ParentRunner.java:71)
      at org.junit.runners.ParentRunner.runChildren(ParentRunner.java:288)
      at org.junit.runners.ParentRunner.access$000(ParentRunner.java:58)
      at org.junit.runners.ParentRunner$2.evaluate(ParentRunner.java:268)
      at org.junit.runners.ParentRunner.run(ParentRunner.java:363)
      at org.junit.runners.Suite.runChild(Suite.java:128)
      at org.junit.runners.Suite.runChild(Suite.java:27)
      at org.junit.runners.ParentRunner$3.run(ParentRunner.java:290)
      at org.junit.runners.ParentRunner$1.schedule(ParentRunner.java:71)
      at org.junit.runners.ParentRunner.runChildren(ParentRunner.java:288)
      at org.junit.runners.ParentRunner.access$000(ParentRunner.java:58)
      at org.junit.runners.ParentRunner$2.evaluate(ParentRunner.java:268)
      at org.junit.runners.ParentRunner.run(ParentRunner.java:363)
      at org.junit.runner.JUnitCore.run(JUnitCore.java:137)
      at org.junit.runner.JUnitCore.run(JUnitCore.java:115)
      at com.oracle.mxtool.junit.MxJUnitWrapper.runRequest(MxJUnitWrapper.java:280)
      at com.oracle.mxtool.junit.MxJUnitWrapper.main(MxJUnitWrapper.java:196)
      .............org.graalvm.compiler.core.test.ea.PartialEscapeUnsafeStoreTest finished

            Assignee:
            Tom Rodriguez
            Reporter:
            Mikael Vidstedt
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: