8207202: [Graal] compiler/graalunit/CoreTest.java fails

Reviewed-by: kvn